# judge_tool

./: .gitignore  Cargo.toml  README.md  abc275_a.rs  cookie  judge  login.sh  submit.sh
lang-id/: json.py  lang_id.txt  language.json
src/: atcoder.rs  get_testcase.rs  json.rs  main.rs  new.rs  submit.rs  test.html  test_judge.rs
test_cases/abc250_a/: in_2  in_4
