[package]
name = "judge_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version="3.1.18", features = ["derive"] }
easy-scraper = "0.2.0"
reqwest = { version = "0.11.10", features = ["blocking"]}
proconio = { version = "0.4.1", features = ["derive"] }
colored = "2.0.0"

[[bin]]
name = "main"
path = "src/main.rs"
