[package]
name = "cargo-judge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version="3.1.18", features = ["derive"] }
easy-scraper = "0.2.0"
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
proconio = { version = "0.4.1", features = ["derive"] }
colored = "2.0.0"
failure = "0.1.8"
thirtyfour = "0.29.1"
tokio = "1.21.2"
scraper = "0.13.0"
url = "2.2.2"
dialoguer = "0.10.1"
toml = "0.5.9"
serde = "1.0.143"
json = "0.12.4"
serde_json = "1.0.83"

[dependencies.async-std]
version = "1"
features = ["attributes", "tokio1"]
